# gluon-nlp

./: .gitmodules  setup.py
.github/workflows/: unittests.yml
docs/api/: model.train.rst
env/: doc.yml  py2.yml  py3.yml
gluonnlp/: __init__.py  vocab.py
gluonnlp/data/: __init__.py  candidate_sampler.py  language_model.py  sampler.py  stream.py  word_embedding_evaluation.py  word_embedding_training.py
gluonnlp/evaluation/: word_embedding.py
gluonnlp/model/: language_model.py
gluonnlp/vocab/: subwords.py  vocab.py
scripts/: word_embedding.py  word_embedding_wtraining.py
scripts/language_model/: character_language_model.py  large_word_language_model.py  word_language_model.py
scripts/word_embedding_training/: arguments.py  blocks.py  bounded_executor.py  data.py  debug_div.py  eval_only.py  evaluate_facebook_fasttext.py  evaluation.py  fasttext.py  model.py  plot.py  self_attention.py  sparse_ops.py  subword.py  test_numba.py  trainer.py  utils.py  word_embedding_training.py
scripts/word_embeddings/: CMakeLists.txt  blocks.py  data.py  data_internal.pyx  evaluate_lm_embeddings.py  evaluate_pretrained.py  evaluation.py  executors.py  model.py  pyproject.toml  sentencepiecewrap.cxx  setup.py  train_fasttext.py  train_glove.py  train_sg_cbow.py  train_sg_cooccur.py  train_word2vec.py  trainer.py  utils.py
scripts/word_embeddings/datasets/: __init__.py  affix_complete_set.txt  engine.py  morphology.py  tasks.py  utils.py
scripts/word_embeddings/tools/: cooccur.cc  ppmi.cc  vocab_count.cc
tests/unittest/: test_datasets.py  test_stream.py  (+2 more)
(+12 files in other folders)
